# webpack-wasm-starter

./: .gitignore  README.md
app/: Cargo.toml  index.html  index.js  my-custom-module.js  package-lock.json  package.json  webpack.config.js
app/assets/css/: styles.css
app/src/: lib.rs  utils.rs
