[package]
name = "webpack-wasm-starter"
version = "0.1.0"
authors = ["Aleksey Bondarev <a.bondarev.it@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
getrandom = {version = "0.2.2", features = ["js"]}
js-sys = "0.3.50"
rand = {version = "0.8.3", features = ["small_rng"]}
wasm-bindgen = "0.2.70"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.1"
web-sys = {version = "0.3.47", features = ["console"]}
